--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <textarea>
-    "For God so loved the world, He gave His only Son that whoever believes in him shall not perish, but will have eternal life."
+    "For God so loved the world, He gave His only Son that whoever believes in him shall not perish, but will have eternal life." --John 3:16
   </textarea>
   <script>
     tinymce.init({
